// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing AdditionalTest 1`] = `
<ForwardRef(Box)
  className="actionBar"
  classes="snapshot-class"
  component="div"
  data-qa="snapshot-qa"
>
  <ForwardRef(Grid)
    alignItems="center"
    className="actionGridLeft"
    container={true}
    direction="row"
    justifyContent="space-between"
  >
    <ForwardRef(Grid)
      item={true}
      key="1"
      xs={6}
    >
      <div
        data-qa="action-bar-custom-title"
      >
        text
      </div>
    </ForwardRef(Grid)>
    <When
      condition={true}
    >
      <ForwardRef(Grid)
        className="actionGridRight"
        item={true}
        key="2"
        sm={6}
        xs={5}
      >
        <Memo(ForwardRef)
          color="primary"
          data-qa="action-bar-button"
          disabled={false}
          label="label"
          onClick={[Function]}
          variant="contained"
        />
      </ForwardRef(Grid)>
    </When>
  </ForwardRef(Grid)>
</ForwardRef(Box)>
`;

exports[`Snapshot Testing Required Props 1`] = `
<ForwardRef(Box)
  className="actionBar"
  component="div"
>
  <ForwardRef(Grid)
    alignItems="center"
    className="actionGridLeft"
    container={true}
    direction="row"
    justifyContent="space-between"
  >
    <ForwardRef(Grid)
      item={true}
      key="1"
      xs={6}
    >
      <ForwardRef(Typography)
        className="actionHeader"
        color="textPrimary"
        data-qa="action-bar-title"
        variant="h1"
      >
        42
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <When
      condition={false}
    >
      <ForwardRef(Grid)
        className="actionGridRight"
        item={true}
        key="2"
        sm={6}
        xs={5}
      >
        <Memo(ForwardRef)
          color="primary"
          data-qa="action-bar-button"
          disabled={false}
          onClick={[Function]}
          variant="contained"
        />
      </ForwardRef(Grid)>
    </When>
  </ForwardRef(Grid)>
</ForwardRef(Box)>
`;

exports[`Snapshot Testing With Button 1`] = `
<ForwardRef(Box)
  className="actionBar"
  component="div"
>
  <ForwardRef(Grid)
    alignItems="center"
    className="actionGridLeft"
    container={true}
    direction="row"
    justifyContent="space-between"
  >
    <ForwardRef(Grid)
      item={true}
      key="1"
      xs={6}
    >
      <div
        data-qa="action-bar-custom-title"
      >
        text
      </div>
    </ForwardRef(Grid)>
    <When
      condition={true}
    >
      <ForwardRef(Grid)
        className="actionGridRight"
        item={true}
        key="2"
        sm={6}
        xs={5}
      >
        <Memo(ForwardRef)
          color="primary"
          data-qa="action-bar-button"
          disabled={false}
          label="label"
          onClick={[Function]}
          variant="contained"
        />
      </ForwardRef(Grid)>
    </When>
  </ForwardRef(Grid)>
</ForwardRef(Box)>
`;
